# apollon

./: .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  build.py  cgram.schema.json  deps  mypy.ini  pyproject.toml  setup.cfg  setup.py  test_env.py  tox.ini
.github/workflows/: mypy.yml  pylint.yml  release.yml  tests.yml
apollon/: IO.py  __init__.py  _defaults.py  _version.py  analyses.py  aplot.py  apollon_globals.py  audio.py  container.py  datasets.py  decorators.py  exceptions.py  extract.py  extractor.py  file  fractal.py  hmm.py  io.py  onsets.py  segment.py  test.py  tools.py  types.py
apollon/commands/: __init__.py  apollon_export.py  apollon_features.py  apollon_hmm.py  apollon_onsets.py  apollon_position.py
apollon/datasets/: earthquakes.data
apollon/fractal/: phasespace.py
apollon/hmm/: Test_FWBW_EM.ipynb  __init__.py  em.py  fwbw.py  hmm_base.py  hmm_utilities.py  params.py  poisson_core.py  poisson_hmm.py  poissonhmm.py  pycksum.py  utilities.py  viterbi.py
apollon/hmm/factory/: __init__.py  build.py  utilities.py
apollon/hmm/graph/: Untitled.ipynb  __init__.py  grapher.py
apollon/hmm/graph/notebooks/: Untitled.ipynb  develop.ipynb  example.ipynb
apollon/hmm/poisson/: poisson_base.py  poisson_core.py  poisson_hmm.py
apollon/hmm_factory/: build.py
apollon/interactive/: __init__.py
apollon/io/: __init__.py  file_properties.py  io.py  json.py  tools.py
apollon/signal/: _features_module.c  audio.py  cdim.c  container.py  correlogram.c  critical_bands.py  features.py  filter.py  makefile  psycho_features_module.c  roughness.c  spectral.py  test.py  tools.py
apollon/som/: __init__.py  defaults.py  neighbors.py  plot.py  som.py  topologies.py  utilities.py
apollon/test/: test_audio.py  test_hmm.py  test_io.py
data/: beat.feat  beat.fraw  beat.odx  beat.pks  beat.tms
data/som/: esra.som  esra_old.npy
datasets/: earthquakes.md
docs/: Makefile  requirements.txt
docs/source/: apollon.onsets.rst  clt.rst  conf.py  download.rst  features.rst  framework.rst  index.rst  install.rst  installation.rst  onsets.rst  starters.rst
docs/source/api/: apollon.audio.rst  apollon.container.rst  apollon.io.json.rst  apollon.signal.tools.rst  apollon.som.plot.rst  apollon.types.rst  onsets.rst  segmentation.rst
docs/source/development/: custom-ods.rst  custom-som.rst  index.rst
docs/source/getting-started/: install.rst
docs/source/onsets/: algo.rst  eval.rst  index.rst  models.rst
docs/source/reference/: apollon.analyses.rst  apollon.aplot.rst  apollon.commands.apollon_export.rst  apollon.commands.apollon_features.rst  apollon.commands.apollon_hmm.rst  apollon.commands.apollon_onsets.rst  apollon.commands.rst  apollon.decorators.rst  apollon.hmm.graph.grapher.rst  apollon.hmm.graph.rst  apollon.hmm.poisson.poisson_core.rst  apollon.hmm.poisson.rst  apollon.hmm.rst  apollon.onsets.rst  apollon.rst  apollon.segment.rst  apollon.signal.features.rst  apollon.signal.rst  apollon.signal.spectral.rst  apollon.signal.tools.rst  apollon.som.som.rst  apollon.som.utilities.rst  index.rst
docs/source/segments/: algo.rst  index.rst  models.rst
documentation/source/: conf.py  modules.rst
documentation/source/reference/: apollon.aplot.rst  apollon.audio.rst  apollon.datasets.rst  apollon.exceptions.rst  apollon.extract.rst  apollon.fractal.rst  apollon.hmm.factory.build.rst  apollon.hmm.factory.rst  apollon.hmm.hmm_utilities.rst  apollon.hmm.poisson.poisson_hmm.rst  apollon.hmm.poisson_hmm_old.rst  apollon.hmm.pycksum.rst  apollon.hmm.rst  apollon.interactive.rst  apollon.io.rst  apollon.onsets.rst  apollon.rst  apollon.segment.rst  apollon.signal.critical_bands.rst  apollon.signal.filter.rst  apollon.signal.spectral.rst  apollon.som.defaults.rst  apollon.som.rst  apollon.som.topologies.rst  apollon.tools.rst  apollon.types.rst  modules.rst
dropouts/: sig_tools.py
dropouts/commands/: __init__.py  apollon_features.py  apollon_hmm.py
include/: cdim.h  correlogram.h  distance.h
schema/: corrdim.schema.json  corrgram.schema.json  dft_params.schema.json
scripts/: ahf  apollon  drawtpm  get_som_winner  get_som_winner.py  make_hmm  make_hmm.py
src/apollon/: __init__.py  _defaults.py  aplot.py  audio.py  container.py  datasets.py  fractal.py  models.py  onsets.py  peak_picking.py  segment.py  tools.py  types.py  typing.py
src/apollon/hmm/: __init__.py  models.py  poisson.py  poisson_hmm.py  utilities.py
src/apollon/io/: __init__.py  io.py  json.py  utils.py
src/apollon/onsets/: __init__.py  _eval.py  detectors.py  eval.py  models.py
src/apollon/schema/: ndarray.schema.json  stft_params.schema.json
src/apollon/segment/: __init__.py  _segment.py  _utils.py  models.py
src/apollon/signal/: __init__.py  _features.pyi  _features_module.c  cepstral.py  container.py  critical_bands.py  features.py  filter.py  models.py  spectral.py  tools.py
src/apollon/som/: __init__.py  _distance.pyi  _distance_module.c  datasets.py  defaults.py  distance.c  neighbors.py  plot.py  som.py  topologies.py  utilities.py
tests/: test_audio.py  test_cdim.c  test_container.py  test_features.py  test_fractal.py  test_io.py  test_onsets.py  test_schema.py  test_segment.py  test_signal_tools.py  test_som.py  test_som_utilities.py  test_spectral.py  test_tools.py
tests/data/: bmu_err_euc.npy  bmu_idx_euc.npy  test_inp.npy  test_weights.npy
tests/hmm/: test_hmm.py
tests/io/: test_json.py
tests/segment/: test_segment.py
tests/signal/: strategies.py  test_cepstral.py  test_features.py  test_filter.py  test_spectral.py  test_tools.py
tests/som/: test_distance.py  test_neighbours.py  test_som.py  test_som_utilities.py  test_utilities.py
