[project]
name = "apollon"
version = "0.1.4"
description = "Feature extraction frame work for content-based music analysis"
authors = [ {name="Michael Blaß", email="mblass@posteo.net"} ]
license = { file="LICENSE.txt" }
readme = "README.md"
keywords = ["music", "analysis", "feature extraction"]
classifiers = [
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Multimedia :: Sound/Audio :: Analysis",
	"Intended Audience :: Science/Research",
	"Intended Audience :: Information Technology",
	"License :: OSI Approved :: BSD License",
]
requires-python = ">=3.7"
dependencies = [
	"numpy >= 1.20",
	"jsonschema >= 3.2.0",
	"scipy >= 0.19.0",
	"matplotlib >= 2",
	"pandas >= 0.20",
	"soundfile >= 0.10.2",
	"chainsaddiction >= 0.2.1",
]

[project.urls]
Repository = "http://github.com/ifsm/apollo"
Documentation = "https://apollon.readthedocs.io"

[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"
