[tool.poetry]
name = "apollon"
version = "0.2.0"
description = "Feature extraction frame work for content-based music analysis"
authors = ["Michael Blaß <mblass@posteo.net>"]
license = "BSD-3"
readme = "README.md"
keywords = ["music", "analysis", "feature extraction"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.urls]
repository = "http://github.com/ifsm/apollo"
documentation = "https://apollon.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.11.0"
numpy = "^1.23.5"
scipy = "^1.9.3"
pandas = "^2.2.2"
soundfile = "^0.12.1"
matplotlib = "^3.6.2"
pydantic = "^2.0.2"
awesom = "^0.1.4"
chainsaddiction = "^0.2.4"
mir-eval = "^0.7"

[tool.poetry.group.development.dependencies]
pylint = "^3.2.2"
mypy = "^1.10.0"
hypothesis = "^6.61.0"
pandas-stubs = "^2.0.1.230501"


[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.23.0"


[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.2.1"

[build-system]
requires = ["poetry-core", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy"
]
strict = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "soundfile"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mir_eval"
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["_", "i", "j", "n", "ax"]

[tool.pylint.design]
max-attributes = 8

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-allow-list = [
	"pydantic",
	"chainsaddiction",
	"apollon.signal._features",
	"apollon.som._distance"]
