[metadata]
name = apollon
version = 0.1.2.1
description = Music analysis based on HMM and SOM
long_description = file: README.md
licence = BSD-3-Clause
author = Michael Blaß
author_email = michael.blass@uni-hamburg.de
keywords = hmm, som, apollon, comsar, music, analysis

classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Intended Audience :: Science/Research

[options]
zip_safe = True
include_package_data = True
packages = find:
scripts =  scripts/apollon
setup_requires = numpy
install_requires = 
	numpy
	scipy      >= "0.19.0"
	matplotlib >= "2"
	networkx   >= "2"
	pandas     >= "0.20"
	setuptools >= "40.0.0"
	sklearn    >= "0.20"
	soundfile  >= "0.10.2"
