[metadata]
name = apollon
version = 0.1.2.1
description = Music analysis based on HMM and SOM
long_description = file: README.md
licence = BSD-3-Clause
author = Michael Blaß
author_email = michael.blass@uni-hamburg.de
keywords = hmm, som, apollon, comsar, music, analysis

classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Intended Audience :: Science/Research

[options]
zip_safe = False
package_dir =
	=src
packages = find_namespace:
scripts =  scripts/apollon
python_requires >= "3.6"
	
install_requires = 
	jsonschema
	scipy      >= "0.19.0"
	matplotlib >= "2"
	networkx   >= "2"
	pandas     >= "0.20"
	soundfile  >= "0.10.2"

[options.packages.find]
where = src

[options.package_data]
apollon = schema/*.schema.json 
