[metadata]
name = apollon
version = 0.1.2.1
description = Feature extraction frame work for content-based music analysis.
long_description = file: README.md
license = BSD 3-Clause License
author = Michael Blaß
author_email = mblass@posteo.net
keywords = music, analysis, feature extraction
project_urls =
	Source code = https://gitlab.rrz.uni-hamburg.de/bal7668/apollon
	Bug Tracker = https://gitlab.rrz.uni-hamburg.de/bal7668/apollon/-/issues

classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Multimedia :: Sound/Audio :: Analysis
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	License :: OSI Approved :: BSD License

[options]
zip_safe = False
package_dir =
	=src

packages = find_namespace:
scripts =  scripts/apollon

python_requires >= "3.7"
install_requires = 
	jsonschema >= "3.2.0"
	scipy      >= "0.19.0"
	matplotlib >= "2"
	pandas     >= "0.20"
	soundfile  >= "0.10.2"

[options.packages.find]
where = src

[options.package_data]
apollon = schema/*.schema.json 
